--- a/Algorithms/Algorithms/Algorithms.csproj
+++ b/Algorithms/Algorithms/Algorithms.csproj
@@ -32,7 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>Algorithms.UNION_FIND.QuickFindUF</StartupObject>
+    <StartupObject>Algorithms.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -48,6 +48,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UNION-FIND\QuickFindUF.cs" />
+    <Compile Include="UNION-FIND\QuickUnionUF.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
