Implementation for UNION FIND using Weighted Quick Union Path Compression approach.
1. Created the class WQUPC for the implementation of UNION FIND problem using Weighted Quick Union Path Compression (Lazy) approach.

--- a/Algorithms/Algorithms/Algorithms.csproj
+++ b/Algorithms/Algorithms/Algorithms.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UNION-FIND\QuickFindUF.cs" />
     <Compile Include="UNION-FIND\QuickUnionUF.cs" />
+    <Compile Include="UNION-FIND\WeightedQUPathCompression.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
