--- a/Algorithms/Algorithms/Algorithms.csproj
+++ b/Algorithms/Algorithms/Algorithms.csproj
@@ -32,7 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>Algorithms.Program</StartupObject>
+    <StartupObject>Algorithms.QUEUE.LinkedListQueue</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -47,6 +47,10 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QUEUE\LinkedListQueue.cs" />
+    <Compile Include="STACK\FixedArrayStack.cs" />
+    <Compile Include="STACK\LinkedListStack.cs" />
+    <Compile Include="STACK\ResizingArrayStack.cs" />
     <Compile Include="UNION-FIND\QuickFindUF.cs" />
     <Compile Include="UNION-FIND\QuickUnionUF.cs" />
     <Compile Include="UNION-FIND\WeightedQUPathCompression.cs" />
