Added the Generic Stack
Generic Stack:
Added the generic stack implemententation using:
a) Linked List
b) Fixed Array
c) Resizing Array

--- a/Algorithms/Algorithms/Algorithms.csproj
+++ b/Algorithms/Algorithms/Algorithms.csproj
@@ -32,7 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>Algorithms.QUEUE.LinkedListQueue</StartupObject>
+    <StartupObject>Algorithms.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -45,6 +45,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GENERIC STACK\GenericFixedArrayStack.cs" />
+    <Compile Include="GENERIC STACK\GenericLinkedListStack.cs" />
+    <Compile Include="GENERIC STACK\GenericResizingArrayStack.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QUEUE\LinkedListQueue.cs" />
