--- a/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.csproj
+++ b/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8247D536-E706-453D-A8C2-1481EBA1895D}</ProjectGuid>
+    <ProjectGuid>{16383460-47C6-4F76-9EE6-B4765E3E7A5D}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Algorithms</RootNamespace>
-    <AssemblyName>Algorithms</AssemblyName>
+    <RootNamespace>ConsoleApplication1</RootNamespace>
+    <AssemblyName>ConsoleApplication1</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,9 +31,6 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject>Algorithms.SORTING.ShellSort</StartupObject>
-  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -45,21 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GENERIC STACK\GenericFixedArrayStack.cs" />
-    <Compile Include="GENERIC STACK\GenericLinkedListStack.cs" />
-    <Compile Include="GENERIC STACK\GenericResizingArrayStack.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QUEUE\LinkedListQueue.cs" />
-    <Compile Include="SORTING\InsertionSort.cs" />
-    <Compile Include="SORTING\SelectionSort.cs" />
-    <Compile Include="SORTING\ShellSort.cs" />
-    <Compile Include="STACK\FixedArrayStack.cs" />
-    <Compile Include="STACK\LinkedListStack.cs" />
-    <Compile Include="STACK\ResizingArrayStack.cs" />
-    <Compile Include="UNION-FIND\QuickFindUF.cs" />
-    <Compile Include="UNION-FIND\QuickUnionUF.cs" />
-    <Compile Include="UNION-FIND\WeightedQUPathCompression.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
