--- a/Algorithms/Algorithms/Algorithms.csproj
+++ b/Algorithms/Algorithms/Algorithms.csproj
@@ -32,7 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>Algorithms.Program</StartupObject>
+    <StartupObject>Algorithms.PRIORITY_QUEUES.BinaryHeap</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -50,6 +50,7 @@
     <Compile Include="GENERIC STACK\GenericResizingArrayStack.cs" />
     <Compile Include="MERGE SORT\BottomUpMergeSort.cs" />
     <Compile Include="MERGE SORT\MergeSort.cs" />
+    <Compile Include="PRIORITY QUEUES\BinaryHeap.cs" />
     <Compile Include="PRIORITY QUEUES\UnorderedPriorityQueue.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
